pod-volume-mount.yml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-poc
  namespace: jenkins
spec:
  containers:
  - image: ubuntu:22.04
    imagePullPolicy: IfNotPresent
    name: jenkins-poc
    volumeMounts:
    - mountPath: /var/jenkins_home
      name: jenkins-home
    - name: jenkins-ssl
      mountPath: /var/jenkins_ssl
  imagePullSecrets:
  - name: cdn-regcred
  restartPolicy: Never
  volumes:
  - name: jenkins-home
    emptyDir: {}
  - name: jenkins-ssl
    emptyDir: {}
