mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: components
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6.50
        name: db
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name:  db-pv
          mountPath: /var/lib/mysql
        - name: mysql-cnf-pv
          mountPath: /etc/mysql/conf.d
      volumes:
      - configMap:
          items:
          - key: my.cnf
            path: my.cnf
          name: mysql-cnf
        name: mysql-cnf-pv
      - name: db-talech-pv
        persistentVolumeClaim:
          claimName: db-pv-claim
      nodeSelector:
        topology.kubernetes.io/zone: us-east-1a

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: components
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
